# CaBr3

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  renovate.json
.github/workflows/: build-python.yml
.woodpecker/: build-debug.yml  build-release.yml  check.yml  docker.yml  test.yml
app/: CaBr3-Generator.spec  requirements.txt
app/src/: gestis_client.py  hp_library.py  main.py  test.html
app_python/: CaBr3-Generator.spec
app_python/src/: copy_logo.py  gestis_client.py  gestis_parser.py  main.py
assets/translations/: fr.json  hr_hr.json  it.json  ru_ru.json  uk.json
crates/config/: Cargo.toml
crates/error-ser/: Cargo.toml
crates/load_save/: Cargo.toml
crates/load_save/src/: handler.rs
crates/load_save/src/cabr2/: mod.rs
crates/load_save/src/pdf/: mod.rs
crates/logger/: Cargo.toml
crates/search/: Cargo.toml
crates/search/contrib/gestis/: helper.rs
crates/search/src/: handler.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
dockerfiles/webserver/: Dockerfile
frontend/: package.json
frontend/src-tauri/: Cargo.toml
frontend/src-wasm/: Cargo.toml
frontend/src-wasm/src/: lib.rs
frontend/src/app/@core/services/native/web/: browser.service.ts
python_app/src/: gestis_client.py  gestis_parser.py  main.py
webserver/: Cargo.toml
