[package]
name = "config"
version = "0.0.0"
authors = [
  "crapStone <crapstone01@gmail.com>",
  "6543 <6543@obermui.de>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
directories-next = "2.0.0"
lazy_static = "1.5.0"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["fs", "io-util"] }
toml = { version = "0.8.14", features = ["preserve_order"] }

types = { path = "../types/" }

[features]
portable = []
webserver = []
tauri-app = []

default = []
