[package]
name = "load_save"
version = "0.0.0"
authors = [
  "crapStone <crapstone01@gmail.com>",
  "6543 <6543@obermui.de>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.81"
chrono = { version = "0.4.38", default-features = false, optional = true }
handlebars = { version = "4.5.0", optional = true }
lazy_static = "1.5.0"
log = "0.4.22"
lopdf = { version = "0.33.0", optional = true }
quick-xml = { version = "0.31.0", features = ["serialize"], optional = true }
regex = { version = "1.10.5", optional = true }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120", optional = true }
thiserror = "1.0.61"
tokio = { version = "1.38.0", default-features = false, features = ["sync"] }
wkhtmltopdf = { version = "0.4.0", optional = true }

config = { path = "../config/", optional = true }
error-ser = { path = "../error-ser" }
types = { path = "../types/" }

[dev-dependencies]
tokio = { version = "1.38.0", features = ["rt", "macros"] }

[features]
beryllium = ["chrono", "quick-xml", "regex"]
cabr2 = ["serde_json"]
pdf = ["config", "tokio/rt-multi-thread", "chrono", "handlebars", "lopdf", "serde_json", "wkhtmltopdf"]

__test = [ "tokio/fs" ] # internal feature to enable features that are needed only for tests

default = []
