[package]
name = "search"
version = "0.0.0"
authors = [
  "crapStone <crapstone01@gmail.com>",
  "6543 <6543@obermui.de>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.81"
cfg-if = "1.0.0"
chrono = { version = "0.4.38", default-features = false }
env_logger = { version = "0.11.3", optional = true }
futures = { version = "0.3.30", optional = true }
lazy_static = "1.5.0"
log = "0.4.22"
quick-xml = { version = "0.31.0", optional = true, features = ["serialize"] }
regex = { version = "1.10.5", optional = true }
reqwest = { version = "0.12.5", features = ["deflate", "gzip", "json", "rustls"], default-features = false, optional = true }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
structopt = { version = "0.3.26", optional = true }
thiserror = "1.0.61"
tokio = { version = "1.38.0", default-features = false, features = ["sync"] }

error-ser = { path = "../error-ser" }
types = { path = "../types/" }

[features]
gestis = [ "reqwest", "quick-xml", "regex" ]
gestis_helper = [ "gestis", "structopt", "env_logger", "tokio/rt-multi-thread", "tokio/macros" ]

default = []

[[bin]]
name = "gestis_helper"
path = "contrib/gestis/helper.rs"
required-features = [ "gestis_helper" ]


