[package]
name = "types"
version = "0.0.0"
authors = [
  "crapStone <crapstone01@gmail.com>",
  "6543 <6543@obermui.de>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
