[package]
name = "cabr2_wasm"
version = "0.5.3"
edition = "2021"
description = 'Wasm implementation for CaBr2.'
authors = [
  "crapStone <crapstone01@gmail.com>",
]
license = "GPLv3+"
repository = "https://codeberg.org/Calciumdibromid/CaBr2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
chrono = { version = "0.4.38", features = ["wasmbind"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = { version = "1.0.0", features = ["color"] }
js-sys = "=0.3.69"
log = "0.4.22"
serde = "1.0.204"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.120"
wasm-bindgen = { version = "=0.2.92", features = ["serde-serialize"] }
wasm-bindgen-futures = "=0.4.42"

load_save = { path = "../../crates/load_save/" }
search = { path = "../../crates/search/" }
types = { path = "../../crates/types/" }

[features]
default = ["load_save/beryllium", "load_save/cabr2", "search/gestis"]
debug_build = ["console_error_panic_hook"]
